<resources>
    <string name="BTN_COMMON_CANCEL">Cancel</string>
    <string name="BTN_COMMON_DELETE">Delete</string>
    <string name="BTN_COMMON_OK">OK</string>
    <string name="BTN_OPTIONS_COMPOSEKEY">Compose Key</string>
    <string name="BTN_OPTIONS_GOLDFINGER">Cheats</string>
    <string name="BTN_OPTIONS_MARCO">Key Macr</string>
    <string name="BTN_OPTIONS_UNARCHIVE">Reload</string>
    <string name="BTN_TEXT_GAMETYPE_BLUETOOTH">Bluetooth</string>
    <string name="BTN_TEXT_GAMETYPE_NETWORK">Wi-Fi</string>
    <string name="BTN_TEXT_GAMETYPE_SINGLE">Single</string>
    <string name="LISTITEM_ABOUT_HELP">Help</string>
    <string name="LISTITEM_ABOUT_PROTOCOL">Agreement</string>
    <string name="LISTITEM_MENU_ABOUT">About</string>
    <string name="LISTITEM_MENU_ARCHIVE">Archive</string>
    <string name="LISTITEM_MENU_EXIT">Exit</string>
    <string name="LISTITEM_MENU_SETTING">Setting</string>
    <string name="LISTITEM_SETTING_ADVANCED_SUMMARY">Select it to open advanced options</string>
    <string name="LISTITEM_SETTING_ADVANCED_TITLE">Advanced</string>
    <string name="LISTITEM_SETTING_ANALOG_DZ_TITLE">Analog touch dead zone</string>
    <string name="LISTITEM_SETTING_ANIMATED_INPUT_SUMMARY">Animated touch control. Disable for huge performance</string>
    <string name="LISTITEM_SETTING_ANIMATED_INPUT_TITLE">Animated</string>
    <string name="LISTITEM_SETTING_ANTIALIAS_SUMMARY">Enables antialiased line rendering for vector games</string>
    <string name="LISTITEM_SETTING_ANTIALIAS_TITLE">Antialias</string>
    <string name="LISTITEM_SETTING_AUTOFIRE_TITLE">Button B as autofire</string>
    <string name="LISTITEM_SETTING_AUTOMAP_OPTIONS_TITLE">GamePad automap options</string>
    <string name="LISTITEM_SETTING_BEAM2X_SUMMARY">Sets the width of the vectors to 2x</string>
    <string name="LISTITEM_SETTING_BEAM2X_TITLE">Beam 2x</string>
    <string name="LISTITEM_SETTING_BUTTONS_SIZE_TITLE">Buttons size (fullscreen)</string>
    <string name="LISTITEM_SETTING_CONTROLLER_TYPE_2_TITLE">Touch type</string>
    <string name="LISTITEM_SETTING_CUSTOMCONTROLLAYOUT_SUMMARY">Select to customize fullscreen control layout</string>
    <string name="LISTITEM_SETTING_CUSTOMCONTROLLAYOUT_TITLE">Customize touch layout</string>
    <string name="LISTITEM_SETTING_DEBUG_SUMMARY">Only for developers</string>
    <string name="LISTITEM_SETTING_DEBUG_TITLE">Debug mode</string>
    <string name="LISTITEM_SETTING_DEFAULTCONTROLLAYOUT_SUMMARY">Restore fullscreen control layout to default values</string>
    <string name="LISTITEM_SETTING_DEFAULTCONTROLLAYOUT_TITLE">Default touch layout</string>
    <string name="LISTITEM_SETTING_DEFAULTSKEYS_SUMMARY">Restore keys to default values</string>
    <string name="LISTITEM_SETTING_DEFAULTSKEYS_TITLE">Default keys</string>
    <string name="LISTITEM_SETTING_DEFINEKEYS_SUMMARY">Select to map emulator stick and buttons to physical keys. (Xperia Play and any other devices with physical keyboards users should configure their buttons or keys here)</string>
    <string name="LISTITEM_SETTING_DEFINEKEYS_TITLE">Define keys</string>
    <string name="LISTITEM_SETTING_DISABLE_RIGHT_STICK_SUMMARY">Disable right stick when is auto detected</string>
    <string name="LISTITEM_SETTING_DISABLE_RIGHT_STICK_TITLE">GamePad disable right stick</string>
    <string name="LISTITEM_SETTING_DOUBLE_BUFFER_SUMMARY">Avoids flickering at the expense of performance</string>
    <string name="LISTITEM_SETTING_DOUBLE_BUFFER_TITLE">Double Buffer</string>
    <string name="LISTITEM_SETTING_EMULATED_RESOLUTION">Emulated Resolution</string>
    <string name="LISTITEM_SETTING_FILTER_CATEGORY_TITLE">Category</string>
    <string name="LISTITEM_SETTING_FILTER_CLONES_SUMMARY">Enable it to hide clones in ROM manager</string>
    <string name="LISTITEM_SETTING_FILTER_CLONES_TITLE">Hide clones</string>
    <string name="LISTITEM_SETTING_FILTER_DRVSRC_TITLE">Driver Source</string>
    <string name="LISTITEM_SETTING_FILTER_FAVORITES_SUMMARY">Enable it to show only favorites games in ROM manager </string>
    <string name="LISTITEM_SETTING_FILTER_FAVORITES_TITLE">Show only favorites</string>
    <string name="LISTITEM_SETTING_FILTER_KEYWORD_TITLE">Keyword</string>
    <string name="LISTITEM_SETTING_FILTER_MANUF_TITLE">Manufacturer</string>
    <string name="LISTITEM_SETTING_FILTER_NOTWORKING_SUMMARY">Enable it to hide not working games in ROM manage</string>
    <string name="LISTITEM_SETTING_FILTER_NOTWORKING_TITLE">Hide not working</string>
    <string name="LISTITEM_SETTING_FILTER_SUMMARY">Select it to open game filter options</string>
    <string name="LISTITEM_SETTING_FILTER_TITLE">Game filter</string>
    <string name="LISTITEM_SETTING_FILTER_YGTE_TITLE">Year &gt;=</string>
    <string name="LISTITEM_SETTING_FILTER_YLTE_TITLE">Year &lt;=</string>
    <string name="LISTITEM_SETTING_FLICKER_SUMMARY">Simulates a vector flicker effect</string>
    <string name="LISTITEM_SETTING_FLICKER_TITLE">Flicker</string>
    <string name="LISTITEM_SETTING_FORCE_GLES10_SUMMARY">Forces OpenGL ES 1.0 render path</string>
    <string name="LISTITEM_SETTING_FORCE_GLES10_TITLE">Force OpenGL ES 1.0</string>
    <string name="LISTITEM_SETTING_FORCE_PXASPECT_2_TITLE">Aspect</string>
    <string name="LISTITEM_SETTING_FRAMESKIP_TITLE">Frame skip</string>
    <string name="LISTITEM_SETTING_GENERAL_SUMMARY">Select it to open general options</string>
    <string name="LISTITEM_SETTING_GENERAL_TITLE">General</string>
    <string name="LISTITEM_SETTING_HIDE_STICK_SUMMARY">Enable to hide stick or dpad when fullscreen</string>
    <string name="LISTITEM_SETTING_HIDE_STICK_TITLE">Hide stick</string>
    <string name="LISTITEM_SETTING_IDLE_WAIT_SUMMARY">Try to save battery at the expense of jitter on some devices</string>
    <string name="LISTITEM_SETTING_IDLE_WAIT_TITLE">Save Battery</string>
    <string name="LISTITEM_SETTING_INPUT_EXTERNAL_2_TITLE">External controller</string>
    <string name="LISTITEM_SETTING_INPUTSETTINGS_SUMMARY">Select it to open input options</string>
    <string name="LISTITEM_SETTING_INPUTSETTINGS_TITLE">Input</string>
    <string name="LISTITEM_SETTING_LANDSCAPE_PORTRAIT_BITMAP_FILTERING_SUMMARY">Select to turn bitmap filtering on, at the expense of performance</string>
    <string name="LISTITEM_SETTING_LANDSCAPE_PORTRAIT_BITMAP_FILTERING_TITLE">Smooth scaling</string>
    <string name="LISTITEM_SETTING_LANDSCAPE_PORTRAIT_OVERLAY_TITLE">Effect overlay</string>
    <string name="LISTITEM_SETTING_LANDSCAPE_PORTRAIT_SCALING_MODE_3_TITLE">Scaling mode</string>
    <string name="LISTITEM_SETTING_LANDSCAPE_PORTRAIT_TOUCH_CONTROLLER_SUMMARY">Disable to hide the touch controller. Useful when you are using a GamePad</string>
    <string name="LISTITEM_SETTING_LANDSCAPE_PORTRAIT_TOUCH_CONTROLLER_TITLE">Touch controller visible</string>
    <string name="LISTITEM_SETTING_LANSDSCAPE_TITLE">Landscape Display Settings</string>
    <string name="LISTITEM_SETTING_LIGHTGUN_SUMMARY">Enable to tap on touchscreen as a lightgun. First finger is main fire. Second finger when first finger is pressed is alternate fire. Touch controller must be enabled.</string>
    <string name="LISTITEM_SETTING_LIGHTGUN_TITLE">Touch lightgun</string>
    <string name="LISTITEM_SETTING_NUMBUTTONS_2_TITLE">Number of buttons (fullscreen) </string>
    <string name="LISTITEM_SETTING_OVERLAY_INTENSITY_TITLE">Effect overlay intensity</string>
    <string name="LISTITEM_SETTING_PORTRAIT_TITLE">Portrait Display Settings</string>
    <string name="LISTITEM_SETTING_PREFSCR_EMU_SUMMARY">Select it to open emulation options</string>
    <string name="LISTITEM_SETTING_PREFSCR_EMU_TITLE">Emulation</string>
    <string name="LISTITEM_SETTING_PXASP1_SUMMARY">Allow a single input device to control multiple players at once. Could cause problems in some ROMs</string>
    <string name="LISTITEM_SETTING_PXASP1_TITLE">P4,P3,P2 as P1</string>
    <string name="LISTITEM_SETTING_RESTOREFILTERS_SUMMARY">Restore all filters to default values</string>
    <string name="LISTITEM_SETTING_RESTOREFILTERS_TITLE">Reset filters to default</string>
    <string name="LISTITEM_SETTING_SHOW_FPS_SUMMARY">Enable it to turn FPS display on</string>
    <string name="LISTITEM_SETTING_SHOW_FPS_TITLE">Show FPS</string>
    <string name="LISTITEM_SETTING_SHOW_INFOWARNINGS_SUMMARY">Shows Game Info and any warnings when a game is selected</string>
    <string name="LISTITEM_SETTING_SHOW_INFOWARNINGS_TITLE">Show info/warnings</string>
    <string name="LISTITEM_SETTING_SOUND_ENGINE_TITLE">Sound Engine</string>
    <string name="LISTITEM_SETTING_SOUND_SYNC_SUMMARY">Enable it to do audio sync (alternative sync for throttling disabled)</string>
    <string name="LISTITEM_SETTING_SOUND_SYNC_TITLE">Audio Sync</string>
    <string name="LISTITEM_SETTING_SOUND_TITLE">Sound</string>
    <string name="LISTITEM_SETTING_SPEED_TITLE">Emulated Speed</string>
    <string name="LISTITEM_SETTING_STICK_SIZE_TITLE">Stick and DPAD size (fullscreen)</string>
    <string name="LISTITEM_SETTING_STICK_TYPE_2_TITLE">Stick type</string>
    <string name="LISTITEM_SETTING_THREADED_VIDEO_SUMMARY">Performance boost on double core devices. Disable it for hi-res emulated resolutions if you have artifacts or tearing at the expense of performance</string>
    <string name="LISTITEM_SETTING_THREADED_VIDEO_TITLE">Threaded Video Render</string>
    <string name="LISTITEM_SETTING_THROTTLE_SUMMARY">Enable it to turn speed throttling on. If you disable it autoframeskip is disabled also</string>
    <string name="LISTITEM_SETTING_THROTTLE_TITLE">Throttle</string>
    <string name="LISTITEM_SETTING_TILT_ANALOG_SUMMARY">Enable to use tilt sensor as analog device, disable to use as digital</string>
    <string name="LISTITEM_SETTING_TILT_ANALOG_TITLE">Tilt as analog</string>
    <string name="LISTITEM_SETTING_TILT_DZ_TITLE">Tilt sensor dead zone</string>
    <string name="LISTITEM_SETTING_TILT_NEUTRAL_TITLE">Tilt sensor neutral vertical position</string>
    <string name="LISTITEM_SETTING_TILT_SENSITIVITY_SUMMARY">Set tilt sensor sensitivity</string>
    <string name="LISTITEM_SETTING_TILT_SENSITIVITY_TITLE">Tilt sensor sensitivity</string>
    <string name="LISTITEM_SETTING_TILT_SENSOR_SUMMARY">Enable to use tilt sensor.</string>
    <string name="LISTITEM_SETTING_TILT_SENSOR_TITLE">Tilt sensor</string>
    <string name="LISTITEM_SETTING_TILT_SWAP_YZ_SUMMARY">Enable to swap Z,Y axes. This fixes vertical tilt on some devices like NVidia Shield.</string>
    <string name="LISTITEM_SETTING_TILT_SWAP_YZ_TITLE">Swap Z,Y axes</string>
    <string name="LISTITEM_SETTING_TILT_TOUCH_SUMMARY">Enable to tap anywhere on screen to fire. First finger is main fire. Second finger when first finger is pressed is alternate fire</string>
    <string name="LISTITEM_SETTING_TILT_TOUCH_TITLE">Touch anywhere</string>
    <string name="LISTITEM_SETTING_TILTSENSOR_SUMMARY">Select it to open tilt sensor options</string>
    <string name="LISTITEM_SETTING_TOUCH_DZ_SUMMARY">Enable Touch Dead Zone</string>
    <string name="LISTITEM_SETTING_TOUCH_DZ_TITLE">Digital touch dead zone</string>
    <string name="LISTITEM_SETTING_VECTOR_SUMMARY">Select it to open vector games options</string>
    <string name="LISTITEM_SETTING_VECTOR_TITLE">Vector</string>
    <string name="LISTITEM_SETTING_VIBRATE_SUMMARY">Enable to vibrate when touch</string>
    <string name="LISTITEM_SETTING_VIBRATE_TITLE">Vibrate on keypress</string>
    <string name="LISTITEM_SETTING_VIDEO_RENDER_MODE_2_TITLE">Video Engine</string>
    <string name="LISTITEM_SETTING_VIDEO_THREAD_PRIORITY_TITLE">Video Thread Priority</string>
    <string name="LISTITEM_SETTING_VSYNC_TITLE">Forced refresh rate (Hz)</string>
    <string name="app_name">Arcade Hub</string>
    <string name="ABOUT_VERSION">Version：1.0.0</string>
</resources>