<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/clr_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/about_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/about_title"
            style="@style/all_title_style"
            android:text="@string/LISTITEM_MENU_ABOUT" />
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="50dp" -->
        <!-- android:background="@color/clr_green_light" -->
        <!-- android:gravity="center" -->
        <!-- android:textAppearance="?android:attr/textAppearanceLarge" -->
        <!-- android:textColor="@color/white" -->
        <!-- android:textSize="20sp" -->

        <ImageView
            android:id="@+id/about_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/ic_back"
            android:scaleType="fitCenter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center" >

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_author"
            android:layout_centerHorizontal="true"
            android:text="@string/ABOUT_VERSION"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4" >

        <LinearLayout
            android:id="@+id/about_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/about_item_bg"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/LISTITEM_ABOUT_HELP"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_margin="4dp"
                android:src="@drawable/about_jiantou" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_help"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/about_item_bg"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/LISTITEM_ABOUT_PROTOCOL"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_margin="4dp"
                android:src="@drawable/about_jiantou" />
        </LinearLayout>
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/share_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/share_scroll_lyt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>