<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plugin_list_game_bottom"
    android:layout_width="fill_parent"
    android:layout_height="76dp"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:background="@color/plugin_behind_bg" >

    <LinearLayout
        android:id="@+id/plugin_list_game_lift"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/plugin_list_remove_tv"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/plugin_single_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/plugin_list_btn_single"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_single"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/plugin_list_single_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/BTN_TEXT_GAMETYPE_SINGLE"
                android:textColor="@color/clr_text_light"
                android:layout_marginTop="5dp"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/plugin_bluetooth_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/plugin_list_btn_bluetooth"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_bluetooth"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/BTN_TEXT_GAMETYPE_BLUETOOTH"
                android:textColor="@color/clr_text_light"
                android:layout_marginTop="5dp"
                android:textSize="12dp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/plugin_wifi_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/plugin_list_btn_wifi"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_wifi"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/plugin_list_net_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/BTN_TEXT_GAMETYPE_NETWORK"
                android:textColor="@color/clr_text_light"
                android:layout_marginTop="5dp"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/plugin_list_remove_tv"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="@color/plugin_clear_bg_color"
        android:gravity="center"
        android:text="@string/BTN_COMMON_DELETE"
        android:textColor="@color/plugin_clear_font_color"
        android:textSize="18dp" />

</RelativeLayout>